gitignorado historial temporal

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ build/
 Thumbs.db
 MinervaPrimeNSE/tempCodeRunnerFile.py
 MinervaPrimeNSE/tempCodeRunnerFile.py
+MinervaPrimeSE/historial_temp.json
