canvios en .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ Thumbs.db
 MinervaPrimeNSE/tempCodeRunnerFile.py
 MinervaPrimeNSE/tempCodeRunnerFile.py
 MinervaPrimeSE/historial_temp.json
+MinervaPrimeSE/historial_temp.json
