Cambios de conducta suaves

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ MinervaPrimeNSE/tempCodeRunnerFile.py
 MinervaPrimeNSE/tempCodeRunnerFile.py
 MinervaPrimeSE/historial_temp.json
 MinervaPrimeSE/historial_temp.json
+MinervaPrimeSE/historial_temp.json
