--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,6 @@ build/
 Thumbs.db
 MinervaPrimeNSE/tempCodeRunnerFile.py
 MinervaPrimeNSE/tempCodeRunnerFile.py
-MinervaPrimeSE/historial_temp.json
-MinervaPrimeSE/historial_temp.json
-MinervaPrimeSE/historial_temp.json
+*historial_temp.json
+*tempCodeRunnerFile.py
+
