--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-flask
+fastapi
+uvicorn
 openai
 faiss-cpu
 sentence-transformers
@@ -6,3 +7,5 @@ numpy
 colorama
 python-dotenv
 bcrypt
+asgiref
+jinja2
