--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,6 @@ services:
     container_name: chatbotuvo
     ports:
       - "5000:5000"
-    restart: always
+    restart: unless-stopped
+    environment:
+      - PYTHONUNBUFFERED=1
